update controller swag documents
